# vykazy-web

./: Cargo.toml  index.html  styles.css
src/: converter.rs  interactor.rs  lib.rs  main.rs  main_screen.rs  viewmodel.rs
src/dashboard/: dashboard_screen.rs  mod.rs
src/templates/: Converter.html  Dashboard.html  MainScreen.html
src/tools/: mod.rs
src/tools/vykaz/: converter.rs  converter_screen.rs  main_screen.rs  mod.rs  viewmodel.rs  vykaz_component.rs
templates/: MainScreen.html
