[package]
name = "vykaz_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-file = "0.2.1"
js-sys = "0.3.57"
log = "0.4.6"
wasm-logger = "0.2.0"
yew = { version = "0.20", features = ["csr"] }
base64 = "0.13.0"
gloo = "0.8"
pdf-extract = { git = "https://github.com/Hessesian/pdf-extract.git" }
vykazy = { git = "https://github.com/Hessesian/vykaz-gen.git" }
regex = "1"
[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]